🐛 Fix unstyled list markers showing on iOS

--- a/assets/css/base/_list.css
+++ b/assets/css/base/_list.css
@@ -22,6 +22,7 @@ ol.unstyled {
 ul.unstyled li::marker,
 ol.unstyled li::marker {
   content: "";
+  font-size: 0;
 }
 
 ul.stars li::marker,
